[IMP] Add new payment view filters and update translations
New filters were introduced to refine payment views, including options for draft, posted, opening, and excluding opening records. Additionally, Italian translations for the new filter labels were added to ensure localization consistency. The module version was incremented to reflect these changes.

--- a/account_due_list/i18n/it.po
+++ b/account_due_list/i18n/it.po
@@ -565,6 +565,7 @@ msgid "Opened"
 msgstr "Aperto"
 
 #. module: account_due_list
+#: view:account.move.line:0
 #: selection:credit.phonecall,state:0
 #, python-format
 msgid "Draft"
@@ -629,4 +630,20 @@ msgstr "Giorni di differenza"
 #: field:account.move.line,date_payment:0
 msgid "Payment Data"
 msgstr "Data Pagamento"
+
+#. module: account_due_list
+#: view:account.move.line:0
+msgid "Posted"
+msgstr "Confermato"
+
+#. module: account_due_list
+#: view:account.move.line:0
+msgid "Exclude Opening"
+msgstr "Escluse Aperture/Chiusure"
+
+#. module: account_due_list
+#: view:account.move.line:0
+msgid "Only Opening"
+msgstr "Solo Aperture/Chiusure"
+
 
